--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -404,6 +404,10 @@
         <i class="fa-regular fa-bell"></i>
         <span class="menu-item-text">Notices</span>
       </a>
+      <a href="/add/navbar_logo" class="menu-item">
+        <i class="fa-regular fa-bell"></i>
+        <span class="menu-item-text">Logo</span>
+      </a>
     
     </div>
   </div>
