--- a/public/css/home.css
+++ b/public/css/home.css
@@ -19,7 +19,7 @@ body {
 .container {
   max-width: 1200px;
   margin: auto;
-  padding: 0 20px;
+  padding: 0 ;
 }
 a { text-decoration: none; }
 
@@ -356,7 +356,7 @@ section { padding: 80px 0; }
   height: 90vh;
   max-height: 800px;
   overflow: hidden;
-  margin-top: -78px;
+  margin-top:-120px;
 }
 
 /* Base slide state: slightly zoomed in & invisible */
