--- a/views/user/about.ejs
+++ b/views/user/about.ejs
@@ -13,7 +13,7 @@
 <body>
 
   <!-- Hero -->
-  <section class="hero">
+  <section class="hero" style="margin-top: -45px;">
     <div class="hero-content">
       <h1>Empowering Students from Grade 5<sup>th</sup> to 12<sup>th</sup></h1>
       <p>Discover our educational programs designed to nurture academic excellence and personal growth.</p>
