--- a/views/user/class&courses.ejs
+++ b/views/user/class&courses.ejs
@@ -348,7 +348,7 @@
 <body>
 
   <!-- Hero Header -->
-  <section class="hero-header">
+  <section class="hero-header" style="margin-top: -45px;" >
     <div class="container">
       <h1>CLASS & COURSES </h1>
       <p></p>
