--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -69,6 +69,7 @@
         box-shadow: var(--shadow);
         animation: fadeIn 0.5s ease-in-out;
         color: #fff;
+        margin-bottom: -50px;
     }
 
     .section-title {
@@ -216,7 +217,7 @@
     }
 </style>
 
-<div class="contact-banner">
+<div class="contact-banner" style="margin-top: -45px;">
     <h1>Get in Touch With Us</h1>
     <p>Reach out to us with any questions or feedback.</p>
 </div>
@@ -261,7 +262,7 @@
             </div>
         </div>
 
-        <div class="card">
+        <div class="card" >
             <h2 class="section-title">Send a Message</h2>
             <form id="contactForm">
                 <div class="form-group">
