--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -442,7 +442,7 @@
  
 
     <!-- CTA Section -->
-    <section class="cta">
+    <section class="cta"style="margin-bottom: -50px;>
         <div class="container">
             <div class="cta-content">
                 <h2>Ready to Transform Your Learning Experience?</h2>
