--- a/views/user/loginstudent.ejs
+++ b/views/user/loginstudent.ejs
@@ -44,7 +44,7 @@
     color: white;
     font-size: 36px;
     font-weight: 800;
-    margin: 0;
+    margin-top: 0;
     text-transform: uppercase;
     letter-spacing: 1px;
   }
@@ -261,7 +261,7 @@
 </style>
 
 <!-- ===== Banner Heading ===== -->
-<div class="page-banner">
+<div class="page-banner" style="margin-top:-45px;">
   <h1>Student Login</h1>
 </div>
 
